<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/txtbiblioteca"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textColor="#33f"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
            android:backgroundTintMode="src_over"
            android:prompt="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="vista_satelite"
            android:text="@string/txtsatelite"
            android:textSize="10dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="vista_hibrido"
            android:text="@string/txtmapa"
            android:textSize="10dp"/>
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        tools:context="com.example.jasson.bibliotecasapp.MapsActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cmddpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mostrar_todo"
            android:text="@string/mostrar" />
        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="acerca_de"
            android:text="@string/txtAbout" />

    </LinearLayout>

</LinearLayout>